<resources>
    <string name="app_name">NoLine</string>
    <string name="scan_QRcode">SCAN QR CODE</string>
    <string name="result">Result</string>
    <!--- ACTIVITY NAMES-->
    <string name="scan_activity">Scan Activity</string>
    <string name="eta_activity">ETA Activity</string>
    <string name="splash_activity">Splash Activity</string>
    <string name="main_activity">Main Activity</string>
    <string name="reserve_activity">Reserve Activity</string>
    <string name="manual_activity">Manual Activity</string>
    <!-- ETA Activity -->
    <string name="ewt">Estimated waiting time</string>
    <string name="loading">Loading</string>
    <string name="priority_number">Priority number</string>
    <string name="current_served">Current served</string>
    <string name="service_name">Service</string>
    <string name="company_name">Company Name</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="line_up">Line up</string>
    <string name="you_will_be_served_at">You will be served at</string>
    <string name="we_are_currently_serving">We are currently serving</string>
    <string name="your_priority_number">Your Priority Number</string>
    <!-- User turn Activity -->
    <string name="its_your_turn">It\'s your turn, please proceed to teller #</string>
    <!-- User skip Activity -->
    <string name="you_have_been_skipped">Sorry, you have been skipped for not attending during your turn. </string>
    <string name="ok">OK</string>
    <!-- Reserve Activity -->
    <string name="your_queue_ticket">Your Queue Ticket</string>
    <string name="please_present">Please present this when your turn comes</string>
    <string name="you_are_currently">You are currently out of the queue</string>
    <string name="line_up_now">Line up now and you will be served</string>
    <!-- Main Activity-->
    <string name="start_lining_up">Start lining up &amp; enjoy</string>
    <string name="the_rest">the rest of your waiting time</string>
    <string name="or">or</string>
    <string name="manually_input_your">Manually input your unique NoLine code</string>
    <!-- Manual Activity -->
    <string name="input_your_unique">Input your unique NoLine code</string>
    <string name="enter">Enter</string>
</resources>
