<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/n"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/companyTV"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/companyTV"
        android:layout_marginBottom="103dp"
        android:text="@string/service_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTV"
        tools:fontFamily="@font/asap" />

    <TextView
        android:id="@+id/serviceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/companyTV"
        android:layout_alignStart="@+id/companyTV"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="-103dp"
        android:text="@string/loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTV"
        tools:fontFamily="@font/asap" />

    <TextView
        android:id="@+id/companyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="-151dp"
        android:text="@string/loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTV"
        tools:fontFamily="@font/asap" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="151dp"
        android:text="@string/company_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTV"
        tools:fontFamily="@font/asap" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="282dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/ewt"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        tools:fontFamily="@font/asap" />

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textColor="@color/dateColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:fontFamily="@font/asap" />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateTV"
        android:layout_centerHorizontal="true"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textColor="@color/timeColor"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTV" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignTop="@+id/textView2"
        android:text="@string/priority_number"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTV"
        tools:fontFamily="@font/asap" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="219dp"
        android:layout_toEndOf="@+id/dateTV"
        android:layout_toRightOf="@+id/dateTV"
        android:text="@string/current_served"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/timeTV"
        tools:fontFamily="@font/asap" />

    <TextView
        android:id="@+id/priorityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView4"
        android:text="@string/loading"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:fontFamily="@font/roboto_light"
        tools:layout_editor_absoluteX="44dp" />

    <TextView
        android:id="@+id/currentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/dateTV"
        android:layout_toRightOf="@+id/dateTV"
        android:text="@string/loading"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:fontFamily="@font/asap"
        tools:layout_editor_absoluteX="238dp" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginBottom="22dp"
        android:text="@string/cancel"
        android:layout_alignLeft="@+id/textView8" />

    <Button
        android:id="@+id/pause_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignTop="@+id/cancel_btn"
        android:text="@string/pause"
        android:layout_alignRight="@+id/textView" />

    <Button
        android:id="@+id/line_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cancel_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/line_up" />


</RelativeLayout>