<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_header1" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/company_name"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/header_color1"
            tools:fontFamily="@font/roboto_light" />

        <TextView
            android:id="@+id/companyTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView1"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textColor="@color/text_color1"
            android:textSize="22sp"
            tools:fontFamily="@font/roboto_medium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/companyTV"
            android:text="@string/service_name"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/header_color1"
            tools:fontFamily="@font/roboto_light" />

        <TextView
            android:id="@+id/serviceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textColor="@color/text_color1"
            android:textSize="22sp"
            tools:fontFamily="@font/roboto_medium" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="141dp"
            app:srcCompat="@drawable/line" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="153dp"
            app:srcCompat="@drawable/pause_icon" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView4"
            android:text="@string/you_are_currently"
            android:textAlignment="center"
            android:textColor="@color/header_color2"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:fontFamily="@font/roboto" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="20dp"
            android:text="@string/you_will_be_served_at"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:fontFamily="@font/roboto_light" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView10"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textColor="@color/dateColor"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:fontFamily="@font/roboto" />

        <TextView
            android:id="@+id/timeTV"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dateTV"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textColor="@color/timeColor"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:fontFamily="@font/roboto" />

        <ImageView
            android:id="@+id/line4"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeTV"
            app:srcCompat="@drawable/line"
            android:layout_alignParentLeft="true"
            android:contentDescription="TODO"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/line_up_btn"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line4"
            android:background="@drawable/round_reserve"
            android:text="@string/pause"
            android:textColor="@color/white"
            tools:fontFamily="@font/roboto"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/line_up_btn"
            android:layout_below="@+id/line4"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:background="@drawable/round_cancel"
            android:text="@string/cancel"
            android:textColor="@color/text_color2"
            tools:fontFamily="@font/roboto" />
    </RelativeLayout>
</LinearLayout>